[package]
name = "rust_nb"
description = "A simple but generic Naive Bayes Model in Rust."
version = "0.1.1"
license = "MIT"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
repository = "https://github.com/liufuyang/rust-nb"
edition = "2018"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
regex = "1"
rayon = "1.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_regex = "0.4"
